move index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<meta name="viewport"
 			content="width=device-width, initial-scale=1.0">
 
-		<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-		<link rel="stylesheet" href="styles/main.css">
+		<!-- <link rel="icon" type="image/png" sizes="32x32" href="./starter-code/assets/favicon-32x32.png"> -->
+		<link rel="icon" type="image/png" sizes="32x32" href="starter-code/assets/favicon-32x32.png">
+		<link rel="stylesheet" href="starter-code/styles/main.css">
 
 		<title>
 			Frontend Mentor | Meet landing page
@@ -19,18 +20,18 @@
 			<section class="chat">
 
 				<!-- logo -->
-				<img src="assets/logo.svg"
+				<img src="starter-code/assets/logo.svg"
 					alt="image logo"
 					class="logo">
 
 				<!-- round images -->
-				<img src="assets/desktop/image-hero-left.png"
+				<img src="starter-code/assets/desktop/image-hero-left.png"
 					alt="image hero left"
 					class="chat__image-tablet">
-				<img src="assets/desktop/image-hero-right.png"
+				<img src="starter-code/assets/desktop/image-hero-right.png"
 					alt="image hero right"
 					class="chat__image-tablet">
-				<img src="assets/tablet/image-hero.png"
+				<img src="starter-code/assets/tablet/image-hero.png"
 					alt="image hero"
 					class="chat__image chat__image-mobile">
 
@@ -72,16 +73,16 @@
 
 				<!-- square images -->
 				<div class="smarter__squareImages">
-					<img src="assets/desktop/image-woman-in-videocall.jpg"
+					<img src="starter-code/assets/desktop/image-woman-in-videocall.jpg"
 						alt="image woman in video call"
 						class="smarter__image">
-					<img src="assets/desktop/image-women-videochatting.jpg"
+					<img src="starter-code/assets/desktop/image-women-videochatting.jpg"
 						alt="image woman in video chatting"
 						class="smarter__image">
-					<img src="assets/desktop/image-men-in-meeting.jpg"
+					<img src="starter-code/assets/desktop/image-men-in-meeting.jpg"
 						alt="image men in meeting"
 						class="smarter__image">
-					<img src="assets/desktop/image-man-texting.jpg"
+					<img src="starter-code/assets/desktop/image-man-texting.jpg"
 						alt="image men texting"
 						class="smarter__image">
 				</div>
@@ -118,11 +119,11 @@ workspace. Control who can join with invite-only team access, data encryption, a
 
 				<picture class="experience__picture">
 					<source media="(max-width: 568px)"
-						srcset="assets/mobile/image-footer.jpg">
+						srcset="starter-code/assets/mobile/image-footer.jpg">
 					<source media="(max-width: 768px)"
-						srcset="assets/tablet/image-footer.jpg">
+						srcset="starter-code/assets/tablet/image-footer.jpg">
 					<img class="experience__image desktop"
-						src="assets/desktop/image-footer.jpg"
+						src="starter-code/assets/desktop/image-footer.jpg"
 						alt="image footer">
 				</picture>
 
