--- a/index.html
+++ b/index.html
@@ -145,5 +145,16 @@ workspace. Control who can join with invite-only team access, data encryption, a
 
 			</section>
 		</div>
+		<div class="attribution">
+			Challenge by
+			<a href="https://www.frontendmentor.io?ref=challenge"
+				target="_blank">
+				Frontend Mentor
+			</a>
+			. 
+    Coded by
+    <a href="https://www.frontendmentor.io/profile/ikitamalarose">IKITAMA Larose</a>
+			.
+		</div>
 	</body>
 </html>
